# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
documentation/: changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database_connection.py  index.py  initialize_database.py
src/entities/: exercise.py  user.py
src/repositories/: exercise_repository.py  user_repository.py
src/services/: app_service.py  user_service.py
src/tests/: user_repository_test.py
src/ui/: create_new_exercise_view.py  create_user_view.py  exercise_view.py  login_view.py  ui.py
